@@ -19,18 +19,16 @@
  */
 package org.carapaceproxy.api;
 
-import org.carapaceproxy.configstore.CertificateData;
-import org.carapaceproxy.core.HttpProxyServer;
-import org.carapaceproxy.core.RuntimeServerConfiguration;
-import org.carapaceproxy.server.certificates.DynamicCertificateState;
-import org.carapaceproxy.server.certificates.DynamicCertificatesManager;
-import org.carapaceproxy.server.config.SSLCertificateConfiguration;
-import org.carapaceproxy.server.config.SSLCertificateConfiguration.CertificateMode;
-import org.carapaceproxy.utils.CertificatesUtils;
-
-import javax.ws.rs.*;
-import javax.ws.rs.core.MediaType;
-import javax.ws.rs.core.Response;
+import static org.carapaceproxy.server.certificates.DynamicCertificateState.AVAILABLE;
+import static org.carapaceproxy.server.certificates.DynamicCertificateState.WAITING;
+import static org.carapaceproxy.server.certificates.DynamicCertificatesManager.DEFAULT_DAYS_BEFORE_RENEWAL;
+import static org.carapaceproxy.server.config.SSLCertificateConfiguration.CertificateMode.MANUAL;
+import static org.carapaceproxy.server.config.SSLCertificateConfiguration.CertificateMode.STATIC;
+import static org.carapaceproxy.utils.APIUtils.certificateModeToString;
+import static org.carapaceproxy.utils.APIUtils.certificateStateToString;
+import static org.carapaceproxy.utils.APIUtils.stringToCertificateMode;
+import static org.carapaceproxy.utils.CertificatesUtils.createKeystore;
+import static org.carapaceproxy.utils.CertificatesUtils.loadKeyStoreFromFile;
 import java.io.IOException;
 import java.io.InputStream;
 import java.security.GeneralSecurityException;
@@ -39,25 +37,35 @@ import java.security.PrivateKey;
 import java.security.cert.Certificate;
 import java.security.cert.X509Certificate;
 import java.util.Base64;
+import java.util.Collection;
+import java.util.Collections;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.logging.Level;
 import java.util.logging.Logger;
-
-import static org.carapaceproxy.server.certificates.DynamicCertificateState.AVAILABLE;
-import static org.carapaceproxy.server.certificates.DynamicCertificateState.WAITING;
-import static org.carapaceproxy.server.certificates.DynamicCertificatesManager.DEFAULT_DAYS_BEFORE_RENEWAL;
-import static org.carapaceproxy.server.config.SSLCertificateConfiguration.CertificateMode.MANUAL;
-import static org.carapaceproxy.server.config.SSLCertificateConfiguration.CertificateMode.STATIC;
-import static org.carapaceproxy.utils.APIUtils.*;
-import static org.carapaceproxy.utils.CertificatesUtils.createKeystore;
-import static org.carapaceproxy.utils.CertificatesUtils.loadKeyStoreFromFile;
-import java.util.Collection;
-import java.util.List;
 import javax.servlet.ServletContext;
+import javax.ws.rs.Consumes;
+import javax.ws.rs.DefaultValue;
+import javax.ws.rs.GET;
+import javax.ws.rs.POST;
+import javax.ws.rs.Path;
+import javax.ws.rs.PathParam;
+import javax.ws.rs.Produces;
+import javax.ws.rs.QueryParam;
+import javax.ws.rs.core.MediaType;
+import javax.ws.rs.core.Response;
 import lombok.AllArgsConstructor;
 import lombok.Data;
+import org.carapaceproxy.configstore.CertificateData;
+import org.carapaceproxy.core.HttpProxyServer;
+import org.carapaceproxy.core.RuntimeServerConfiguration;
+import org.carapaceproxy.server.certificates.DynamicCertificateState;
+import org.carapaceproxy.server.certificates.DynamicCertificatesManager;
+import org.carapaceproxy.server.config.SSLCertificateConfiguration;
+import org.carapaceproxy.server.config.SSLCertificateConfiguration.CertificateMode;
+import org.carapaceproxy.utils.CertificatesUtils;
 
 /**
  * Access to certificates
@@ -93,6 +101,7 @@ public class CertificatesResource {
 
         private final String id;
         private final String hostname;
+        private final String subjectAlternativeNames;
         private final String mode;
         private final boolean dynamic;
         private String status;
@@ -101,9 +110,12 @@ public class CertificatesResource {
         private String daysBeforeRenewal;
         private String serialNumber;
 
-        public CertificateBean(String id, String hostname, String mode, boolean dynamic, String sslCertificateFile) {
+        public CertificateBean(String id, String hostname,
+                               Set<String> subjectAlternativeNames,
+                               String mode, boolean dynamic, String sslCertificateFile) {
             this.id = id;
             this.hostname = hostname;
+            this.subjectAlternativeNames = subjectAlternativeNames != null ? String.join(", ", subjectAlternativeNames) : "";
             this.mode = mode;
             this.dynamic = dynamic;
             this.sslCertificateFile = sslCertificateFile;
@@ -123,6 +135,7 @@ public class CertificatesResource {
             CertificateBean certBean = new CertificateBean(
                     certificate.getId(),
                     certificate.getHostname(),
+                    certificate.getSubjectAlternativeNames(),
                     certificateModeToString(certificate.getMode()),
                     certificate.isDynamic(),
                     certificate.getFile()
@@ -153,12 +166,14 @@ public class CertificatesResource {
                     return;
                 }
                 Certificate[] chain = CertificatesUtils.readChainFromKeystore(keystore);
-                if (chain != null && chain.length > 0) {
+                if (chain.length > 0) {
                     X509Certificate _cert = ((X509Certificate) chain[0]);
                     bean.setExpiringDate(_cert.getNotAfter().toString());
                     bean.setSerialNumber(_cert.getSerialNumber().toString(16).toUpperCase()); // HEX
                     if (!certificate.isAcme()) {
-                        state = CertificatesUtils.isCertificateExpired(_cert.getNotAfter(), 0) ? DynamicCertificateState.EXPIRED : DynamicCertificateState.AVAILABLE;
+                        state = CertificatesUtils.isCertificateExpired(_cert.getNotAfter(), 0)
+                                ? DynamicCertificateState.EXPIRED
+                                : DynamicCertificateState.AVAILABLE;
                     }
                 }
             }
@@ -174,8 +189,9 @@ public class CertificatesResource {
     @GET
     @Path("{certId}")
     public CertificatesResponse getCertificateById(@PathParam("certId") String certId) {
+        final var cert = findCertificateById(certId);
         return new CertificatesResponse(
-                List.of(findCertificateById(certId)),
+                cert != null ? List.of(cert) : Collections.emptyList(),
                 (HttpProxyServer) context.getAttribute("server")
         );
     }
@@ -206,6 +222,7 @@ public class CertificatesResource {
             CertificateBean certBean = new CertificateBean(
                     certificate.getId(),
                     certificate.getHostname(),
+                    certificate.getSubjectAlternativeNames(),
                     certificateModeToString(certificate.getMode()),
                     certificate.isDynamic(),
                     certificate.getFile()
@@ -222,6 +239,7 @@ public class CertificatesResource {
     @Consumes(MediaType.APPLICATION_OCTET_STREAM)
     public Response uploadCertificate(
             @PathParam("domain") String domain,
+            @QueryParam("subjectaltnames") @DefaultValue("") String subjectAlternativeNames,
             @QueryParam("type") @DefaultValue("manual") String type,
             @QueryParam("daysbeforerenewal") Integer daysbeforerenewal,
             InputStream uploadedInputStream) throws Exception {
@@ -258,12 +276,12 @@ public class CertificatesResource {
                 state = AVAILABLE;
             }
 
-            CertificateData cert = new CertificateData(domain, encodedData, state, "", "");
+            CertificateData cert = new CertificateData(domain, encodedData, state);
             cert.setManual(MANUAL.equals(certType));
-
+            cert.setSubjectAlternativeNames(Set.of(subjectAlternativeNames.split(",")));
             cert.setDaysBeforeRenewal(daysbeforerenewal != null ? daysbeforerenewal : DEFAULT_DAYS_BEFORE_RENEWAL);
-            HttpProxyServer server = (HttpProxyServer) context.getAttribute("server");
-            server.updateDynamicCertificateForDomain(cert);
+
+            ((HttpProxyServer) context.getAttribute("server")).updateDynamicCertificateForDomain(cert);
 
             return Response.status(200).entity("SUCCESS: Certificate saved").build();
         }
